# syn_test

./: .gitignore  app.py  config.py  pyproject.toml
core/handlers/: basic.py  form.py  news.py
core/keyboards/: inline.py  reply.py
core/utils/: commands.py  statesform.py  validate_birthday.py  validate_email.py  validate_instagram.py  validate_phone.py
