[tool.poetry]
name = "synergy"
version = "0.1.0"
description = ""
authors = ["pomaxa399"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
pydantic = {extras = ["settings"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
